better text and possible questions for dice percerption task. also changed the range of possible combo dice

--- a/dice_task/DiceRatings.html
+++ b/dice_task/DiceRatings.html
@@ -271,12 +271,15 @@ Dice task
 <div class="card-body">
 
     <p>
-        In another experiment, a player got the opportunity to roll a dice and collect the number of points on it as bonus.
-        The bonus would be played based on what the player reported, not what they actually drew.
+        In this new task, you will observe the behaviour of another participant and give your opinion of that behaviour.
+    </p>
+    <p>
+        In a previous, separate survey, a player got the opportunity to roll a die and collect the number of points on it as bonus.
+        The bonus was paid based on the number the player reported, not the number they actually drew.
         As such, they could lie and report a different number than that on the dice they threw.
     </p>
     <p>
-        Below is the actual score they drew along with the score they reported:
+        Below is the actual number they drew along with the bonus they reported and were paid:
     </p>
 
     <br>
@@ -340,7 +343,7 @@ Dice task
     </div>
 
     <div style="text-align: center;">
-        <span style="color: #0d6efd">
+        <span style="color: #FFFFFF">
             <output id="output1"></output>
         </span>
     </div>
@@ -349,6 +352,25 @@ Dice task
         <button class="btn btn-primary">Next</button>
     </div>
 
+    <h5 style="color: #0d6efd">
+        How likeable do you think this person is?
+    </h5>
+
+    <h5 style="color: #0d6efd">
+        How much would you be willing to pay to play a trust game with that person?
+    </h5>
+
+    <h5 style="color: #0d6efd">
+        How much would you be willing to pay to play a coordination game with that person?
+    </h5>
+
+    <h5 style="color: #0d6efd">
+        How much would you like to be friends with this person?
+    </h5>
+
+    <h5 style="color: #0d6efd">
+        How much would you like this person to do your taxes?
+    </h5>
 
 
 </div>
