rewrote rule following

--- a/rule_following/RuleFollowing.html
+++ b/rule_following/RuleFollowing.html
@@ -190,10 +190,15 @@ Anti-social rule following task
     <div class="card-body">
 
         <p>
-            This is the task.
+            In this new task, we will ask you to perform a simple task.
         </p>
         <p>
-            blablabla
+            The rule is to move all three sliders to the middle, on mark 50.
+            If you do, X points are taken away from a charity.
+            If you don't, the charity keeps those points.
+        </p>
+        <p>
+            Here are the sliders:
         </p>
 
         <h5 style="color: #0d6efd">Move the slider in the middle of each line on the value 50.</h5>
