--- a/crowding_out/CrowdingInOutPage.html
+++ b/crowding_out/CrowdingInOutPage.html
@@ -737,7 +737,7 @@
     <!-- Add hidden input to store the selected value -->
     <input type="hidden" name="crowding_decision" id="selected-number-1">
 
-<!--        {{ formfield_errors 'crowding_decision' }}-->
+        {{ formfield_errors 'crowding_decision' }}
 
     <div class='responsive-div'>
 
@@ -800,8 +800,8 @@
     <input type="hidden" name="crowding_norm_decision1" id="selected-norm-1">
     <input type="hidden" name="crowding_norm_decision2" id="selected-norm-2">
 
-<!--        {{ formfield_errors 'crowding_norm_decision1' }}-->
-<!--            {{ formfield_errors 'crowding_norm_decision2' }}-->
+        {{ formfield_errors 'crowding_norm_decision1' }}
+            {{ formfield_errors 'crowding_norm_decision2' }}
 
     <div class='responsive-div'>
 
