--- a/baseline_trials/AttentionCheckPage.html
+++ b/baseline_trials/AttentionCheckPage.html
@@ -360,10 +360,10 @@
 
             <div class='numbers'>
                 <div class="comprehension-row" data-input="selected-attention1">
-                    <div class="comprehension_option" data-value="0" >2 point(s) </div>
-                    <div class="comprehension_option" data-value="1" >0 point(s) </div>
-                    <div class="comprehension_option" data-value="2" >6 point(s) </div>
-                    <div class="comprehension_option" data-value="3" >4 point(s) </div>
+                    <div class="comprehension_option" data-value="0" >2 points </div>
+                    <div class="comprehension_option" data-value="1" >0 points </div>
+                    <div class="comprehension_option" data-value="2" >6 points </div>
+                    <div class="comprehension_option" data-value="3" >4 points </div>
                 </div>
             </div>
 
@@ -379,10 +379,10 @@
 
             <div class='numbers'>
                 <div class="comprehension-row" data-input="selected-attention2">
-                    <div class="comprehension_option" data-value="0" >4 point(s) </div>
-                    <div class="comprehension_option" data-value="1" >2 point(s) </div>
-                    <div class="comprehension_option" data-value="2" >0 point(s) </div>
-                    <div class="comprehension_option" data-value="3" >6 point(s) </div>
+                    <div class="comprehension_option" data-value="0" >4 points </div>
+                    <div class="comprehension_option" data-value="1" >2 points </div>
+                    <div class="comprehension_option" data-value="2" >0 points </div>
+                    <div class="comprehension_option" data-value="3" >6 points </div>
                 </div>
             </div>
 
