--- a/baseline_trials/DictatorPage.html
+++ b/baseline_trials/DictatorPage.html
@@ -652,14 +652,14 @@
              data-index="{{ dic_norm_decision.index }}">
 
             {% if dic_identity != "baseline"%}
-                <img src="" style='width:12vw; position:absolute; top: -25%; left:calc(50% + 9vw)' class='receiverCountry'>
-                <img src="" style='width:12vw; position:absolute; top: -24%; left:calc(50% - 21vw)' class='dictatorCountry '>
+                <img src="" style='width:12vw; position:absolute; z-index: -1; top: -25%; left:calc(50% + 9vw)' class='receiverCountry'>
+                <img src="" style='width:12vw; position:absolute; z-index: -1; top: -24%; left:calc(50% - 21vw)' class='dictatorCountry '>
 
                 <img src="" style='width:10vw; position:absolute; top:3.8vw; left:calc(50% + 13vw)' class='receiverCountryMap'>
                 <img src="" style='width:10vw; position:absolute; top:3.8vw; left:calc(50% - 23.5vw)' class='dictatorCountryMap'>
             {% endif %}
 
-            <img src="/static/{{ image }}" style="width:27vw; top:3vw">
+            <img src="/static/{{ image }}" style="width:27vw; top:3vw; ">
 
             <div class="person-a" style="top:60%">
                 <b>PERSON A</b>
@@ -765,14 +765,14 @@
             <div class="figure-container {% if '2PP' in player.treatment or '0DG' in player.treatment %}short-figure-container{% endif %}">
 
                 {% if dic_identity != "baseline"%}
-                    <img src="" style='width:12vw; position:absolute; top: -25%; left:calc(50% + 9vw)' class='receiverCountry'>
-                    <img src="" style='width:12vw; position:absolute; top: -25%; left:calc(50% - 21vw)' class='dictatorCountry'>
+                    <img src="" style='width:12vw; position:absolute; z-index: -1; top: -25%; left:calc(50% + 9vw)' class='receiverCountry'>
+                    <img src="" style='width:12vw; position:absolute; z-index: -1; top: -25%; left:calc(50% - 21vw)' class='dictatorCountry'>
 
                     <img src="" style='width:10vw; position:absolute; top:3.8vw; left:calc(50% + 13vw)' class='receiverCountryMap'>
                     <img src="" style='width:10vw; position:absolute; top:3.8vw; left:calc(50% - 23.5vw)' class='dictatorCountryMap'>
                 {% endif %}
 
-                <img src="/static/{{ image }}" style="width:27vw; top:3vw">
+                <img src="/static/{{ image }}" style="width:27vw; top:3vw; ">
 
                 {% if "0DG" in player.treatment or "2PP" in player.treatment %}
                 <div class="person-a" style="top:60%">
